[package]
name = "lut"
version = "0.1.0"
authors = ["Philipp Korber <p.korber@1aim.com>"]
license = "MIT/Apache-2.0"
description   = "provides lookup tables and helps with constructstructing (and merging) more of them"
readme        = "README.md"
documentation = "https://docs.rs/lut"
repository    = "https://github.com/1aim/lut"
keywords      = [ "lookup", "tables" ]

[badges]
travis-ci = { repository = "1aim/lut", branch = "master" }
maintenance = { status = "actively-developed" }


